trying base URL change

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title:            SacArts4ALL
 tagline:          'SacArts4ALL'
 description:      ‘SacArts4ALL’
-url:              'https://tedfitzpatrick.github.io/sacarts4ALL/'
-baseurl:          'https://tedfitzpatrick.github.io/sacarts4ALL/'
+url:              'https://tedfitzpatrick.github.io/sacarts4ALL'
+baseurl:          'https://tedfitzpatrick.github.io/sacarts4ALL'
 
 author:
   name:           'SacArts4ALL'
