May the force be bruted

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:            SacArts4ALL
 tagline:          'SacArts4ALL'
 description:      ‘SacArts4ALL’
-url:              'http://code4sac.github.io/sacarts4all.org'
+url:              'https://code4sac.github.io/sacarts4all'
 baseurl:          '/sacarts4all'
 
 author:
